# study-playsdev-playground

./: .gitmodules  test
.github/: README.md
daemon/: .editorconfig  nginx-logger.service  nginx-logger.service.sh
docker/: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile.apache  Dockerfile.nginx  Jenkinsfile  README.ru.md  compose.yml
docker/ansible/: inventory.yml  playbook.yml
docker/ansible/setup-docker/: README.md
docker/apache/: ports.conf
docker/apache/html/: cpu.php  index.html  info.php
docker/apache/sites-available/: 000-default.conf
docker/nginx/: nginx.conf
docker/nginx/conf.d/: site.conf.locations
docker/nginx/html/: index.html  sunflower.html
docker/nginx/templates/: default.conf.template  (+2 more)
terraform/: .editorconfig  .gitignore  .terraform.lock.hcl  README.md  README.ru.md  main.tf  variables.auto.tfvars  variables.tf
terraform/compute/: datas.tf  variables.tf  vm.tf
terraform/db/: datas.tf  db.tf  variables.tf
terraform/network/: locals.tf  outputs.tf  security-groups.tf  static-ips.tf  variables.tf  vpc.tf
yandex-cloud-helper/: .gitignore  README.md  pyproject.toml
yandex-cloud-helper/yandex_cloud_helper/: main.py
yandex-cloud-helper/yandex_cloud_helper/api/: __init__.py  compute_cloud.py
yandex-cloud-helper/yandex_cloud_helper/api/request_body/: create_instance.json
yandex-cloud-helper/yandex_cloud_helper/menu/: __init__.py  choices.py  handlers.py
yandex-cloud-helper/yandex_cloud_helper/utils/: __init__.py  load_from_json.py
yc-install-multi-os/: .editorconfig  README.md  src.ps1  src.sh
(+20 files in other folders)
